fixing dark mode switch

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,11 +9,10 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 8rem 0;
   flex: 1;
-  display: flex;
+  display: grid;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   color: var(--text-color);
 }
@@ -21,10 +20,11 @@
 .footer {
   width: 100%;
   height: 4rem;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid var(--text-color);
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--text-color);
 }
 
 .title {
