--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,15 +20,16 @@ body.dark {
 }
 
 nav {
-  width: 100%;
+  width: 90%;
   height: 3rem;
   background-color: var(--background-color);
+  align-items: flex-end;
 }
 
 ul {
   display: flex;
-  width: 50%;
   justify-content: space-around;
+  align-items: center;
   padding: 0;
 }
 
@@ -39,7 +40,7 @@ li {
 }
 
 li:hover {
-  color: rgb(137, 101, 170);
+  color: #6699cc;
   transform: scale(1.1);
 }
 
@@ -49,6 +50,8 @@ a {
 }
 .toggle {
   display: flex;
-  justify-content: flex-end;
-  padding: 1rem;
+}
+.logo {
+  padding-left: 5rem;
+  color: var(--text-color);
 }
